[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://Scene/OtherScene/SkillIcon.gd" id="1"]
[ext_resource type="FontFile" uid="uid://mq0cfa3t1vbr" path="res://Font/8_FZCuYuan-M03S.ttf" id="2"]

[node name="SkillIcon" type="TextureRect"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource( "1" )

[node name="PicBox" type="TextureProgressBar" parent="."]
modulate = Color(0.329412, 0.329412, 0.329412, 1)
layout_mode = 0
offset_right = 46.0
offset_bottom = 43.0
max_value = 1.0
step = 0.0
fill_mode = 5
nine_patch_stretch = true

[node name="TimeText" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 5.0
offset_right = 43.0
offset_bottom = 43.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource( "2" )
horizontal_alignment = 1
vertical_alignment = 1

[node name="LastTime" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="LastTime" to="." method="_on_last_time_timeout" flags=18]
